--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ body {
   width: 100%;
   border-radius: calc(130px / 2);
   background: white;
+  opacity: 0.85;
  }
  .search-bar-button {
   height: 100%;
@@ -52,6 +53,7 @@ body {
  .status-icon-time{
   width: 100px;
   text-align: center;
+  font-family: "Roboto";
   line-height: 50px;
   font-size: 30px;
  }
@@ -66,6 +68,7 @@ body {
 }
  .icon-text {
   text-align: center;
+  font-family: "Roboto";
  }
  .icon-line {
   height: calc(950px / 5);
